--- a/back-end/hospital-api/src/main/resources/templates/fragments/appointments_report_form.html
+++ b/back-end/hospital-api/src/main/resources/templates/fragments/appointments_report_form.html
@@ -16,32 +16,36 @@
         }
 
         .row-whitout-padding > div {
-            border: 1px solid black;
             border-top: 0px;
         }
 
-        .row > div, .row-whitout-padding > div {
+        .row > div, .row-whitout-padding > div, .row-data > div {
             display: table-cell;
+        }
+
+        .row-data > div, .row-whitout-padding > div, .space  {
+            border: 1px solid black;
+        }
+
+        .row-data > div {
+            padding: 3px;
         }
 
         .space {
             height: 25px;
-            border: 1px solid black;
-            padding-top: 10px;
-            padding-bottom: 5px;
         }
 
         .border-bottom, .authorization-title, .total-billing-data {
             border-bottom: 1px solid black;
         }
 
-        .space, .concept-title, .signature, .billing, .data-billing div, .affiliate-billing, .authorization-title,
+        .space, .row-data div, .concept-title, .signature, .billing, .data-billing div, .affiliate-billing, .authorization-title,
         .authorization .professional-signature, .delegation-stamp,
         .practice-autor, .practice-autor .professional-signature {
             text-align: center;
         }
 
-        .hospital {
+        .establishment {
             width: 500px;
         }
 
@@ -49,7 +53,7 @@
             width: 150px;
         }
 
-        .hospital, .code, .professional-signature, .delegation-stamp, .authorization, .practice-autor {
+        .establishment, .code, .professional-signature, .delegation-stamp, .authorization, .practice-autor {
             display: inline-block;
         }
 
@@ -57,7 +61,11 @@
             width: 350px;
         }
 
-        .doc-number, .condition, .billing {
+        .doc-number {
+            width: 135px;
+        }
+
+        .billing {
             width: 140px;
         }
 
@@ -70,7 +78,11 @@
         }
 
         .gender, .room {
-            width: 70px;
+            width: 75px;
+        }
+
+        .row .gender {
+            width: 80px;
         }
 
         .age, .ce {
@@ -82,7 +94,7 @@
         }
 
         .coverage {
-            width: 260px;
+            width: 280px;
         }
 
         .affiliate-type {
@@ -93,7 +105,7 @@
             width: 600px;
         }
 
-        .cant-code, .affiliate-number {
+        .condition, .cant-code, .affiliate-number {
             width: 120px;
         }
 
@@ -183,95 +195,67 @@
 </div>
 <div class="table">
     <div class="row">
-        <div class="hospital">
-            <div>1. ESTABLECIMIENTO</div>
-            <div class="space" th:text="${establishment}"></div>
-        </div>
-        <div class="code">
-            <div>CÓDIGO</div>
-            <div class="space">&nbsp;</div>
-        </div>
+        <div class="establishment">1. ESTABLECIMIENTO</div>
+        <div class="code">CÓDIGO</div>
+    </div>
+    <div class="row-data">
+        <div class="establishment" th:text="${establishment}"></div>
+        <div class="code">&nbsp;</div>
     </div>
     <div class="row">
-        <div class="complete-name">
-            <div>2. APELLIDOS Y NOMBRES</div>
-            <div class="space" th:text="${completePatientName}"></div>
-        </div>
-        <div class="address">
-            <div>DOMICILIO</div>
-            <div class="space" th:text="${address}"></div>
-        </div>
-        <div class="date">
-            <div>3. FECHA</div>
-            <div class="space" th:text="${reportDate}"></div>
-        </div>
+        <div class="complete-name">2. APELLIDOS Y NOMBRES</div>
+        <div class="address">DOMICILIO</div>
+        <div class="date">3. FECHA</div>
+    </div>
+    <div class="row-data">
+        <div class="complete-name" th:text="${completePatientName}"></div>
+        <div class="address" th:text="${address}"></div>
+        <div class="date" th:text="${reportDate}"></div>
     </div>
     <div class="row">
-        <div class="gender">
-            <div>4. SEXO</div>
-            <div class="space" th:text="${patientGender}"></div>
-        </div>
-        <div class="age">
-            <div>5. EDAD</div>
-            <div class="space" th:text="${patientAge}"></div>
-        </div>
-        <div class="doc-number">
-            <div>6. N° DE DOCUMENTO</div>
-            <div class="space" th:text="${documentNumber}"></div>
-        </div>
-        <div class="doc-type">
-            <div>7. TIPO. DOC</div>
-            <div class="space" th:text="${documentType}"></div>
-        </div>
-        <div class="ce">
-            <div>8. C.E.</div>
-            <div class="space"></div>
-        </div>
-        <div class="room">
-            <div>9. SALA</div>
-            <div class="space"></div>
-        </div>
-        <div class="bed">
-            <div>10. CAMA</div>
-            <div class="space"></div>
-        </div>
-        <div class="hcn">
-            <div>11. H.C.N°</div>
-            <div class="space"></div>
-        </div>
+        <div class="gender">4. SEXO</div>
+        <div class="age">5. EDAD</div>
+        <div class="doc-number">6. N° DOCUMENTO</div>
+        <div class="doc-type">7. TIPO. DOC</div>
+        <div class="ce">8. C.E.</div>
+        <div class="room">9. SALA</div>
+        <div class="bed">10. CAMA</div>
+        <div class="hcn">11. H.C.N°</div>
+    </div>
+    <div class="row-data">
+        <div class="gender" th:text="${patientGender}"></div>
+        <div class="age" th:text="${patientAge}"></div>
+        <div class="doc-number" th:text="${documentNumber}"></div>
+        <div class="doc-type" th:text="${documentType}"></div>
+        <div class="ce">&nbsp;</div>
+        <div class="room">&nbsp;</div>
+        <div class="bed">&nbsp;</div>
+        <div class="hcn">&nbsp;</div>
     </div>
     <div class="row">
-        <div class="condition">
-            <div>12. CONDICIÓN</div>
-            <div class="space"></div>
-        </div>
-        <div class="coverage">
-            <div>13. OBRA SOCIAL O MUTUAL</div>
-            <div class="space" th:text="${medicalCoverage}"></div>
-        </div>
-        <div class="affiliate-type">
-            <div>14. TIPO DE AFILIADO</div>
-            <div class="space"></div>
-        </div>
-        <div class="affiliate-number">
-            <div>15. N° DE AFILIADO</div>
-            <div class="space" th:text="${affiliateNumber}"></div>
-        </div>
+        <div class="condition">12. CONDICIÓN</div>
+        <div class="coverage">13. OBRA SOCIAL O MUTUAL</div>
+        <div class="affiliate-type">14. TIPO DE AFILIADO</div>
+        <div class="affiliate-number">15. N° DE AFILIADO</div>
+    </div>
+    <div class="row-data">
+        <div class="condition">&nbsp;</div>
+        <div class="coverage" th:text="${medicalCoverage}"></div>
+        <div class="affiliate-type">&nbsp;</div>
+        <div class="affiliate-number" th:text="${affiliateNumber}"></div>
     </div>
     <div class="row">
-        <div class="diagnosis">
-            <div>16. DIAGNÓSTICO CLÍNICO</div>
-            <div class="space"></div>
-        </div>
-        <div class="code">
-            <div>17. CÓDIGO</div>
-            <div class="space"></div>
-        </div>
+        <div class="diagnosis">16. DIAGNÓSTICO CLÍNICO</div>
+        <div class="code">17. CÓDIGO</div>
+    </div>
+    <div class="row-data">
+        <div class="diagnosis">&nbsp;</div>
+        <div class="code">&nbsp;</div>
     </div>
     <div class="row">
         <div class="cant-code">
             <div>18. CANT O CÓD</div>
-            <div class="space"></div>
+            <div class="space">&nbsp;</div>
         </div>
         <div class="concept">
             <div class="concept-title">19. CONCEPTO</div>
@@ -280,11 +264,11 @@
         </div>
         <div class="unitary">
             <div>20. UNITARIO</div>
-            <div class="space"></div>
+            <div class="space">&nbsp;</div>
         </div>
         <div class="total">
             <div>21. TOTAL</div>
-            <div class="space"></div>
+            <div class="space">&nbsp;</div>
         </div>
     </div>
     <div class="row-whitout-padding">
