tg-4530 [FIX] Cambio en valor de combos de dialogo de diente seteado en una apertura anterior

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth-dialog/tooth-dialog.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth-dialog/tooth-dialog.component.html
@@ -3,8 +3,7 @@
 	<div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
 		<app-tooth #tooth [toothTreatment]="toothTreatment" (selectedSurfacesEmitter)="reciveSelectedSurfaces($event)"
 			[newFinding]="newHallazgoId" [setFirstProcedure]="firstProcedureId" [setSecondProcedure]="secondProcedureId"
-			[setThirdProcedure]="thirdProcedureId"
-			[findingsAndProcedures]="odontogramService.getActionsFrom(data.tooth.snomed.sctid)">
+			[setThirdProcedure]="thirdProcedureId">
 		</app-tooth>
 		<div fxLayout="column">
 			<span class="title">Pieza {{data.quadrantCode}}{{data.tooth.code}}</span>
