--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontogram/odontogram.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontogram/odontogram.component.html
@@ -12,7 +12,7 @@
 				<span>{{quadrants.quadrant1.code}}{{tooth.code}}</span>
 				<app-tooth [toothTreatment]="toothTreatment" (click)="openToothDialog(tooth,quadrants.quadrant1.code)"
 					matTooltip="Pieza {{quadrants.quadrant1.code}}{{tooth.code}}" matTooltipClass="multiline-tooltip"
-					[findingsAndProcedures]="odontogramService.getActionsFrom(tooth.snomed.sctid)">
+					[findingsAndProcedures]="actionsFrom[tooth.snomed.sctid]">
 				</app-tooth>
 			</div>
 
@@ -22,7 +22,7 @@
 				<span>{{quadrants.quadrant2.code}}{{tooth.code}}</span>
 				<app-tooth [toothTreatment]="toothTreatment" (click)="openToothDialog(tooth,quadrants.quadrant2.code)"
 					matTooltip="Pieza {{quadrants.quadrant2.code}}{{tooth.code}}" matTooltipClass="multiline-tooltip"
-					[findingsAndProcedures]="odontogramService.getActionsFrom(tooth.snomed.sctid)">
+					[findingsAndProcedures]="actionsFrom[tooth.snomed.sctid]">
 				</app-tooth>
 			</div>
 		</div>
@@ -31,7 +31,7 @@
 				<span>{{quadrants.quadrant5.code}}{{tooth.code}}</span>
 				<app-tooth [toothTreatment]="toothTreatment" (click)="openToothDialog(tooth,quadrants.quadrant5.code)"
 					matTooltip="Pieza {{quadrants.quadrant5.code}}{{tooth.code}}" matTooltipClass="multiline-tooltip"
-					[findingsAndProcedures]="odontogramService.getActionsFrom(tooth.snomed.sctid)">
+					[findingsAndProcedures]="actionsFrom[tooth.snomed.sctid]">
 				</app-tooth>
 			</div>
 		</div>
@@ -40,7 +40,7 @@
 				<span>{{quadrants.quadrant6.code}}{{tooth.code}}</span>
 				<app-tooth [toothTreatment]="toothTreatment" (click)="openToothDialog(tooth,quadrants.quadrant6.code)"
 					matTooltip="Pieza {{quadrants.quadrant6.code}}{{tooth.code}}" matTooltipClass="multiline-tooltip"
-					[findingsAndProcedures]="odontogramService.getActionsFrom(tooth.snomed.sctid)">
+					[findingsAndProcedures]="actionsFrom[tooth.snomed.sctid]">
 				</app-tooth>
 			</div>
 		</div>
@@ -49,7 +49,7 @@
 				<span>{{quadrants.quadrant8.code}}{{tooth.code}}</span>
 				<app-tooth [toothTreatment]="toothTreatment" (click)="openToothDialog(tooth,quadrants.quadrant8.code)"
 					matTooltip="Pieza {{quadrants.quadrant8.code}}{{tooth.code}}" matTooltipClass="multiline-tooltip"
-					[findingsAndProcedures]="odontogramService.getActionsFrom(tooth.snomed.sctid)">
+					[findingsAndProcedures]="actionsFrom[tooth.snomed.sctid]">
 				</app-tooth>
 			</div>
 		</div>
@@ -58,7 +58,7 @@
 				<span>{{quadrants.quadrant7.code}}{{tooth.code}}</span>
 				<app-tooth [toothTreatment]="toothTreatment" (click)="openToothDialog(tooth,quadrants.quadrant7.code)"
 					matTooltip="Pieza {{quadrants.quadrant7.code}}{{tooth.code}}" matTooltipClass="multiline-tooltip"
-					[findingsAndProcedures]="odontogramService.getActionsFrom(tooth.snomed.sctid)">
+					[findingsAndProcedures]="actionsFrom[tooth.snomed.sctid]">
 				</app-tooth>
 			</div>
 		</div>
@@ -67,7 +67,7 @@
 				<span>{{quadrants.quadrant4.code}}{{tooth.code}}</span>
 				<app-tooth [toothTreatment]="toothTreatment" (click)="openToothDialog(tooth,quadrants.quadrant4.code)"
 					matTooltip="Pieza {{quadrants.quadrant4.code}}{{tooth.code}}" matTooltipClass="multiline-tooltip"
-					[findingsAndProcedures]="odontogramService.getActionsFrom(tooth.snomed.sctid)">
+					[findingsAndProcedures]="actionsFrom[tooth.snomed.sctid]">
 				</app-tooth>
 			</div>
 		</div>
@@ -76,7 +76,7 @@
 				<span>{{quadrants.quadrant3.code}}{{tooth.code}}</span>
 				<app-tooth [toothTreatment]="toothTreatment" (click)="openToothDialog(tooth,quadrants.quadrant3.code)"
 					matTooltip="Pieza {{quadrants.quadrant3.code}}{{tooth.code}}" matTooltipClass="multiline-tooltip"
-					[findingsAndProcedures]="odontogramService.getActionsFrom(tooth.snomed.sctid)">
+					[findingsAndProcedures]="actionsFrom[tooth.snomed.sctid]">
 				</app-tooth>
 			</div>
 		</div>
