tg-2220 Mejora de estilos - espacios entre componentes

--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/new-patient/new-patient.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/new-patient/new-patient.component.scss
@@ -28,6 +28,7 @@ div.form-buttons {
 button.medical-coverage {
 	width: 202px;
 	margin-bottom: 13px;
+	margin-top: 5px;
 	text-transform: uppercase;
 }
 
