--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/detalle-vacuna/detalle-vacuna.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/detalle-vacuna/detalle-vacuna.component.html
@@ -1,29 +1,25 @@
-<div fxLayout="row" fxLayoutAlign="end">
+<div fxLayout="row" fxLayoutAlign="end" class="close">
 	<button mat-button [mat-dialog-close]="true" tabindex="-1">
 		<mat-icon>close</mat-icon>
 	</button>
 </div>
 
 <div mat-dialog-title fxLayout="row" fxLayoutAlign="space-between">
-	<div class="p3">{{ data.title}}</div>
+	<div class="title">{{data.title}}</div>
 </div>
-
 
 <div mat-dialog-content fxLayoutAlign="start" fxLayout="column">
 
-	<strong class="p2" [translate]="'ambulatoria.paciente.vacunas.details.tradename'"></strong>
-	<ng-container *ngIf="data.tradename else noInfo" class="padding-to-align-chip">{{ data.tradename }} </ng-container>
-	<div class="p3"></div>
-
-	<mat-list>
-		<div class="problems-table-header-text">
-			<strong fxFlex="33%" class="p2" [translate]="'ambulatoria.paciente.vacunas.details.DOSE'"></strong>
-			<strong fxFlex="33%" class="p2" [translate]="'ambulatoria.paciente.vacunas.details.DATE'"></strong>
-			<strong fxFlex="33%" class="p2" [translate]="'ambulatoria.paciente.vacunas.details.lotNumber'"></strong>
+	<mat-list class="mat-list">
+		<div class="mat-list-item">
+			<div fxFlex="33%" [translate]="'ambulatoria.paciente.vacunas.details.DOSE'"></div>
+			<div fxFlex="33%" [translate]="'ambulatoria.paciente.vacunas.details.DATE'"></div>
+			<div fxFlex="33%" [translate]="'ambulatoria.paciente.vacunas.details.lotNumber'"></div>
 		</div>
-		<div>
+		<div  class="mat-values">
 			<div fxFlex="33%">
-				<ng-container *ngIf="data.dose else noInfo"><strong class="dose">{{ data.dose | uppercase }}</strong>
+				<ng-container *ngIf="data.dose else noInfo">
+					<strong class="dose">{{data.dose | uppercase}}</strong>
 				</ng-container>
 			</div>
 			<div fxFlex="33%">
@@ -35,42 +31,39 @@
 		</div>
 	</mat-list>
 
-	<div class="p3"></div>
 	<mat-divider></mat-divider>
 
-	<strong class="p4" [translate]="'ambulatoria.paciente.vacunas.details.institution'"></strong>
-	<ng-container *ngIf="data.institution else noInfo">{{data.institution}}</ng-container>
+	<div class="inst-prof-container" fxLayout="column">
+		<div class="sub-title" [translate]="'ambulatoria.paciente.vacunas.details.institution'"></div>
+		<ng-container *ngIf="data.institution else noInfo">{{data.institution}}</ng-container>
+		<div class="sub-title" [translate]="'ambulatoria.paciente.vacunas.details.professional'"></div>
+		<ng-container *ngIf="data.professional else noInfo" class="inst-prof-values"><div> Dr. {{data.professional}}</div></ng-container>
+	</div>
 
-	<strong class="p5" [translate]="'ambulatoria.paciente.vacunas.details.professional'"></strong>
-	<ng-container *ngIf="data.professional else noInfo">{{data.professional}}</ng-container>
-
-	<div class="p3"></div>
 	<mat-divider></mat-divider>
 
-
-	<mat-list class="p3">
-		<div>
-			<strong fxFlex="50%" class="p2"
-				[translate]="'ambulatoria.paciente.vacunas.details.condition_motive'"></strong>
-			<strong fxFlex="50%" class="p2" [translate]="'ambulatoria.paciente.vacunas.details.scheme'"></strong>
+	<mat-list class="mat-list">
+		<div class="mat-list-item">
+			<div fxFlex="50%"  [translate]="'ambulatoria.paciente.vacunas.details.condition_motive'"></div>
+			<div fxFlex="50%"  [translate]="'ambulatoria.paciente.vacunas.details.scheme'"></div>
 		</div>
-		<div class="p2">
-			<div fxFlex="50%" class="mat-h3" class="capitalize-first-letter">
+		<div class="mat-values">
+			<div fxFlex="50%" class="capitalize-first-letter">
 				<ng-container *ngIf="data.terms else noInfo">{{data.terms}}</ng-container>
 			</div>
-			<div fxFlex="50%" class="mat-h3" class="capitalize-first-letter">
+			<div fxFlex="50%" class="capitalize-first-letter">
 				<ng-container *ngIf="data.scheme else noInfo">{{data.scheme}}</ng-container>
 			</div>
 		</div>
 	</mat-list>
 
-	<div class="p6">
-		<div fxFlex="100%" class="mat-h3" class="capitalize-first-letter">
+	<div class="observations">
+		<div fxFlex="100%" class="capitalize-first-letter">
 			<ng-container *ngIf="data.observations else noInfo">{{data.observations}}</ng-container>
 		</div>
 	</div>
 </div>
 
 <ng-template #noInfo>
-	<div class="m"> Sin Informacion</div>
+	<snap class="not-info" [translate]="'ambulatoria.paciente.vacunas.details.not-info'"></snap>
 </ng-template>
