--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/detalle-vacuna/detalle-vacuna.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/detalle-vacuna/detalle-vacuna.component.scss
@@ -1,42 +1,77 @@
-.dose {
-    border-radius: 5px;
-    padding: 5px;
-	background-color:#2687C533;
-	color:#2687C5;
+@import "../../../../../../../assets/styles/mixins.scss";
+
+.mat-dialog-content {
+	@include general-font;
 }
+
+// .dose {
+// 	border-radius: 5px;
+// 	padding: 5px;
+// 	background-color: #2687c533;
+// 	color: #2687c5;
+// }
 
 .mat-list-item {
 	padding-bottom: 5px;
-	padding-top: 5px;
+	padding-top: 15px;
+	font-size: 14px;
+	font-weight: 500;
 }
-.m {
-	color: #A8A8A8;
-}
-.dose {
-    border-radius: 2px;
-    padding: 2px;
-	background-color:#2687C533;
-	color:#2687C5;
-}
-.p {
-    padding-top: 10px;
-	padding-block-end: 10px;
-}
-.p2{
-	padding-block-end: 10px;
-}
-.p3{
-    padding-top: 30px;
-}
-.p4{
-	padding-block-end: 10px;
-    padding-top: 30px;
-}
-.p5{
-	padding-block-end: 10px;
-    padding-top: 30px;
-}
-.p6{
+
+.mat-list {
 	padding-top: 30px;
-	padding-block-end: 40px;
+	padding-bottom: 30px;
+}
+
+.not-info {
+	color: #a8a8a8;
+}
+
+.close {
+	color:rgba(0, 0, 0, 0.54);
+}
+
+.dose {
+	border-radius: 2px;
+	padding: 2px;
+	background-color: #2687c533;
+	color: #2687c5;
+	font-size: 14px;
+	font-weight: 500;
+}
+
+.title {
+	padding-top: 5px;
+	font-size: 22px;
+	font-weight: 500;
+}
+
+.inst-prof-container {
+	margin-bottom: 30px;
+}
+
+.sub-title {
+	padding-block-end: 13px;
+	padding-top: 30px;
+	font-size: 14px;
+	font-weight: 500;
+}
+
+.observations {
+	padding-block-end: 30px;
+	font-size: 16px;
+	font-weight: 500;
+	color:#A8A8A8;
+    height: 19px;
+}
+
+.mat-values {
+	font-size: 16px;
+	font-weight: 400;
+}
+
+.inst-prof-values {
+	font-size: 16px;
+	font-weight: 400;
+    height: 18.75px;
 }
