--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/component/search-create/search-create.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/component/search-create/search-create.component.scss
@@ -11,6 +11,7 @@
 	}
 
 }
+
 .search {
 	@include form-buttons;
 	margin-top: 25px;
@@ -19,4 +20,9 @@
 
 .material-icons{
 	width: 30px;;
+}
+
+.errorScan{
+	position: relative;
+	width: 340px;
 }
