--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
@@ -137,18 +137,20 @@
 			</div>
 		</section>
 
-		<ng-container *ngIf="downloadReportIsEnabled && !isAbsent() && ((hasRoleToDownloadReports$ | async) === true || params.hasPermissionToAssignShift)">
-			<section id="report" fxLayout="column">
-				<span class="mat-body-strong" fxLayout="row">Descargar informes</span>
-				<section class="example-section">
-					<mat-checkbox class="example-margin" fxLayout="row" (change)="enableDowndloadAnexo($event.checked)">
-						<span class="mat-body">Anexo II</span>
-					</mat-checkbox>
-					<mat-checkbox class="example-margin" fxLayout="row" (change)="enableDowndloadFormulario($event.checked)">
-						<span class="mat-body">Formulario V</span>
-					</mat-checkbox>
+		<ng-container *appHasRole="['ADMINISTRATIVO', 'ENFERMERO', 'ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']">
+			<ng-container *ngIf="downloadReportIsEnabled && !isAbsent() && ((hasRoleToDownloadReports$ | async) === true || params.hasPermissionToAssignShift)">
+				<section id="report" fxLayout="column">
+					<span class="mat-body-strong" fxLayout="row">Descargar informes</span>
+					<section class="example-section">
+						<mat-checkbox class="example-margin" fxLayout="row" (change)="enableDowndloadAnexo($event.checked)">
+							<span class="mat-body">Anexo II</span>
+						</mat-checkbox>
+						<mat-checkbox class="example-margin" fxLayout="row" (change)="enableDowndloadFormulario($event.checked)">
+							<span class="mat-body">Formulario V</span>
+						</mat-checkbox>
+					</section>
 				</section>
-			</section>
+			</ng-container>
 		</ng-container>
 	</div>
 
